Fix image distortion issue
In smaller browser windows (e.g., iPhones), images would shrink in
width but maintain a minimum height, causing distortion. This css
update fixes that, though I’m not sure if there’s a better way or not.

--- a/static/css/poole-overrides.css
+++ b/static/css/poole-overrides.css
@@ -5,3 +5,12 @@
 pre {
   padding: 0
 }
+
+/* Update img to add height: auto. This fixes an issue where images were distorted in small windows */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0 0 1rem;
+  border-radius: 5px;
+}
